remove the -qt4 suffix from qwt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ if (NOT QWT_INCLUDE_DIR)
     find_path(QWT_INCLUDE_DIR qwt.h /usr/include/qwt-qt4)
 endif()
 if (NOT QWT_LIBRARY)
-    find_library(QWT_LIBRARY qwt-qt4)
+    find_library(QWT_LIBRARY qwt)
 endif()
 if (NOT QWT_INCLUDE_DIR OR NOT QWT_LIBRARY)
     message(FATAL "Qwt not found! Set QWT_INCLUDE_DIR and QWT_LIBRARY to the correct location.")
